# ai-search

./: .env.example  .gitlab-ci.yml  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
core/: __init__.py  config.py  intent_manager.py  llm_manager.py  report_manager.py  search_engine.py
models/: __init__.py  response.py
services/: filter_service.py  intent_service.py  llm_service.py  pagination_service.py  result_converter.py  result_service.py  sort_service.py
utils/: NL_processor.py  custom_filter.py  intent_cleaner.py  llm_filter.py  score_calculator.py  tokenizer.py
