[tool.poetry]
name = "ai-search"
version = "0.0.1"
description = "AI-powered product search API for e-commerce platform"
authors = ["jaeyulim <jaeyulim@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"

# 언어 및 자연어 처리 관련 패키지
langchain = "0.*"
langchain-core = "0.*"
langchain-experimental = "0.*"
langchain-community = "0.*"
langchain-openai = "0.*"
#langchain-elasticsearch = "0.*"
#langchain-chroma = "0.*"
#langchain-teddynote = "0.*"
#langchainhub = "0.*"
#langgraph = "0.*"
#langsmith = "0.*"
openai = "1.*"
rank-bm25 = "0.2.2"
kiwipiepy = "0.*"

# 데이터베이스 및 캐시 관련 패키지
#redis = "5.*"
#chromadb = "0.*"

# 시각화 및 사용자 인터페이스 관련 패키지
#matplotlib = "3.*"
#streamlit = "1.*"
#jupyter = "1.*"
#notebook = "7.*"

# 딥러닝 및 머신러닝 관련 패키지
torch = "2.*"
torchvision = "0.*"
faiss-cpu = "1.*"
open-clip-torch = "2.*"

# 기타 유틸리티 및 필수 패키지
python-dotenv = "1.*"
pydantic = "2.*"
pydantic-settings = ">=2.7.0"
#oracledb = "3.*"
protobuf = "3.*"
fastapi = "^0.109.2"
uvicorn = "^0.27.1"

# 임시
#sqlalchemy = "^2.0.27"
#cx-Oracle = "^8.3.0"
#python-multipart = "^0.0.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api" 